# Nanquimori-Engine

./: CMakeLists.txt  CMakePresets.json  Ideias para adicionar na engine.txt  recent_projects.txt  solução de problemas.txt
.cmake/build-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  NanquimoriPlayer_icon.rc  cmake_install.cmake  nanquimori_icon.rc
.cmake/build-debug/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
.cmake/build-debug/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  raylib.pc
models/: horten_ho_229.glb
projects/2/: project.json
projects/teste/: project.json
projects/teste/export/teste/: project.json
projects/teste/export/teste/shaders/: procedural_axis_projection.fs
src/: raygui.h
src/app/: application.cpp  application.h  exe_icon_win32.cpp  exe_icon_win32.h  game_exporter.cpp  game_exporter.h  main.cpp  nanquimori_icon.rc.in  window_icon_win32.cpp  window_icon_win32.h
src/assets/: model_manager.cpp  model_manager.h
src/editor/ui/: color_picker.cpp  color_picker.h  drag_float_input.cpp  drag_float_input.h  editor_layout.cpp  editor_layout.h  export_dialog.cpp  export_dialog.h  file_explorer.cpp  file_explorer.h  help_panel.cpp  help_panel.h  info_panel.cpp  info_panel.h  properties_panel.cpp  properties_panel.h  splash_screen.cpp  splash_screen.h  text_input.cpp  text_input.h  top_bar.cpp  top_bar.h  ui_button.cpp  ui_button.h  ui_style.cpp  ui_style.h  ui_tooltip.cpp  ui_tooltip.h
src/editor/viewport/: camera_controller.cpp  camera_controller.h  gizmo.cpp  gizmo.h
src/physics/: nanquimori_physics.cpp  nanquimori_physics.h
src/runtime/: game_application.cpp  game_application.h  game_main.cpp
src/scene/: outliner.cpp  outliner.h  scene_camera.cpp  scene_camera.h  scene_manager.cpp  scene_manager.h
src/tools/: svg_asset_loader.cpp  svg_asset_loader.h
tmp_boot_probe_simple/: project.json
tmp_boot_probe_simple/shaders/: procedural_axis_projection.vs
tmp_fullscreen_native_probe/: project.json
